# crust

./: Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  fib.crust  hello.crust  install.sh  manifest  point.crust
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml
docs/: compatibility.md  testing.md
examples/: btreemap_usage.crust  closures.crust  enums.crust  fib.crust  fibonacci.rs  hashset_ops.crust  hello.crust  hello.py  hello.rs  iterators.crust  modules.crust  option_result.crust  patterns.crust  point.crust  point.py  queue_channel.crust  state_machine.crust
scripts/: coverage.sh
src/: analysis.rs  ast.rs  codegen.rs  contracts.rs  env.rs  environment.rs  error.rs  eval.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  proofgen.rs  repl.rs  stdlib.rs  strictness.rs  types.rs  value.rs
src/interpreter/: env.rs  error.rs  mod.rs  value.rs
src/stdlib/: builtins.rs  mod.rs
tests/: build_examples.rs  collection_semantics.rs  contracts_smoke.rs  example_programs.rs  modules.rs  primitive_widths.rs  proof_artifacts.rs  strictness_levels.rs  unsupported_features.rs
