[package]
name = "crust"
version = "0.1.0"
edition = "2021"
description = "rustc backwards — an interpreted Rust that always knows what you meant"
license = "MIT"
authors = ["Natasha Fatale", "Rocky J. Squirrel", "t peps"]

[[bin]]
name = "crust"
path = "src/main.rs"

[dependencies]
thiserror = "2"
rustyline = "14"
dirs = "5"
